--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@
 
             <!-- What We Do
             ----------------------------------------------- -->
-            <!-- Dark -->
-            <section id="folio" class="s-folio target-section">
+            <section id="services" class="s-folio target-section">
 
                 <div class="row section-header light-on-dark" data-num="02">
                     <h3 class="column lg-12 section-header__pretitle text-pretitle">What we do ?</h3>
@@ -625,11 +624,11 @@
                             <article class="brick brick--double entry">
                                 <a href="#modal-01" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/white_turban@2x.jpg" alt="">
+                                        <img src="images/folio/FrozenFoods12x12.png" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Frontend Design</div>
-                                        <h4 class="entry__title">White Turban</h4>
+                                        <div class="entry__cat">UI/UX</div>
+                                        <h4 class="entry__title">Frozen Foods Co.</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
@@ -637,11 +636,11 @@
                             <article class="brick brick--double entry">
                                 <a href="#modal-02" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/caffeine_and_tulips@2x.jpg" alt="">
+                                        <img src="images/folio/Interior12x12.png" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Brand Identity</div>
-                                        <h4 class="entry__title">Caffeine & Tulips</h4>
+                                        <div class="entry__cat">UI/UX + Website</div>
+                                        <h4 class="entry__title">Havens Home</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
@@ -649,11 +648,11 @@
                             <article class="brick entry">
                                 <a href="#modal-03" class="entry__link">
                                     <div class="entry__thumb">
-                                        <img src="images/folio/grayscale@2x.jpg" alt="">
+                                        <img src="images/folio/Attendance12x12.png" alt="">
                                     </div>
                                     <div class="entry__info">
-                                        <div class="entry__cat">Product Design</div>
-                                        <h4 class="entry__title">Grayscale</h4>
+                                        <div class="entry__cat">UI/UX Design</div>
+                                        <h4 class="entry__title">Exact Attendance</h4>
                                     </div>
                                 </a>
                             </article> <!-- entry -->
@@ -703,7 +702,7 @@
                 -------------------------------------------- -->
                 <div id="modal-01" hidden>
                     <div class="modal-popup">
-                        <img src="images/folio/gallery/g-turban.jpg" alt="">
+                        <img src="images/folio/gallery/FrozenFoods21x14.png" alt="">
 
                         <div class="modal-popup__desc">
                             <h5>White Turban</h5>
@@ -715,13 +714,13 @@
                             </ul>
                         </div>
 
-                        <a href="https://www.behance.net/" class="modal-popup__details">Project link</a>
+                        <!-- <a href="https://www.behance.net/" class="modal-popup__details">Project link</a> -->
                     </div>
                 </div> <!-- end modal -->
 
                 <div id="modal-02" hidden>
                     <div class="modal-popup">
-                        <img src="images/folio/gallery/g-tulips.jpg" alt="">
+                        <img src="images/folio/gallery/Interior21x14.png" alt="">
 
                         <div class="modal-popup__desc">
                             <h5>Caffeine & Tulips</h5>
@@ -738,7 +737,7 @@
 
                 <div id="modal-03" hidden>
                     <div class="modal-popup">
-                        <img src="images/folio/gallery/g-grayscale.jpg" alt="">
+                        <img src="images/folio/gallery/Attendance21x14.png" alt="Attendance Image">
 
                         <div class="modal-popup__desc">
                             <h5>Grayscale</h5>
@@ -959,7 +958,7 @@
             <div class="row list-block block-lg-one-half block-tab-whole block-stack-on-1000 s-footer__btns">
                 <div class="column list-block__item">
                     <div class="s-footer__contact-btn">
-                        <a href="https://wa.me/+918129848691" class="btn btn--primary u-fullwidth">
+                        <a href="https://wa.me/+918594007227" class="btn btn--primary u-fullwidth" target="_blank">
                             Let's Talk
                         </a>
                     </div>
